Flush out frames before trying to focus ourselves, in case our frame hasn't been created yet.  Bug 277482, r+sr=jst